alteração tela login

--- a/login.html
+++ b/login.html
@@ -44,8 +44,7 @@
       if (userType === '' || username === '' || password === '') {
         alert('Por favor, preencha todos os campos.');
       } else {
-        // Redirecionar para a próxima tela
-        window.location.href = "serviços.html"; // Substitua pelo nome do seu arquivo da próxima tela
+        window.location.href = "serviços.html"; 
       }
     });
   </script>
