--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
         <input type="password" id="password" name="password" required>
       </div>
       <button type="submit">Entrar</button>
-      <p class="signup-link">Não tem uma conta? <a href="#">Cadastre-se</a></p>
+      <p class="signup-link">Não tem uma conta? <a href="cadastro.html">Cadastre-se</a></p>
     </form>
   </div>
 
