feat: alteração de botao no agendamento, link de tela de conclusão de agendamento direcionando para a primeira pagina

--- a/agendamentos.html
+++ b/agendamentos.html
@@ -161,7 +161,7 @@
         }
 
         document.getElementById("finalize-button").onclick = function() {
-            alert('Agendamento concluído com sucesso!');
+            window.location.href='confirmaçãoagendamento.html';
             // Aqui você pode adicionar a lógica para salvar o agendamento no servidor
         };
 
