--- a/confirmaçãoagendamento.html
+++ b/confirmaçãoagendamento.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmação de Agendamento</title>
-    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="confirmacaoagendamento.css"> 
 </head>
 <body>
     <div class="container">
@@ -19,7 +19,6 @@
             <p><strong>Preço:</strong> R$ 80,00</p>
         </div>
 
-        <a href="pagina_de_agendamento.html" class="button">Voltar ao Calendário</a>
         <a href="serviços.html" class="button">Sair</a>
     </div>
 
